Customizations for BCBSNC

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/dashboard/documentdashboard.html
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/dashboard/documentdashboard.html
@@ -281,7 +281,7 @@
                     <td>{{item.documentVersion}}</td>
                     <td>{{item.documentMatterName}}</td>
                     <td>{{item.documentOwner}}</td>
-                    <td>{{item.documentCreatedDate}}</td>
+                    <td>{{item.docId}}</td>
                 </tr>
             </tbody>
         </table>
@@ -302,7 +302,7 @@
                     <td>{{item.documentVersion}}</td>
                     <td>{{item.documentMatterName}}</td>
                     <td>{{item.documentOwner}}</td>
-                    <td>{{item.documentCreatedDate}}</td>
+                    <td>{{item.docId}}</td>
                     <!--<td>{{item.matterID}}</td>-->
                 </tr>
             </tbody>
