--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/matter/createMatter.html
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/matter/createMatter.html
@@ -283,7 +283,7 @@
             <div class="col-xs-5">
                 <button class="buttonPrev pull-right marginTop10"  ng-class="{'btnHover' : cm.prevButtonDisabled=== false}" ng-disabled="cm.prevButtonDisabled" ng-click="cm.PreviousClick($event)">{{cm.createContent.ButtonPreviousText}}</button>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6" ng-hide='cm.sectionName=="snCreateAndShare"'>
                 <button class="buttonPrev pull-left marginTop10" ng-class="{'btnHover' : cm.nextButtonDisabled=== false}" ng-disabled="cm.nextButtonDisabled" ng-click='cm.NextClick($event)'>{{cm.createContent.ButtonNextText}}</button>
             </div>
         </div>
@@ -300,8 +300,8 @@
     <div class="popUpContainer popUpContainerLevel3" ng-class="cm.popupContainer" ng-show="cm.taxonomyHierarchyLevels==3||cm.taxonomyHierarchyLevels==2" style="bottom:0px; color:#333;font-size:0.87em;left:0px;position:absolute;right:0px;top:0px;width:100%;height:400px;z-index:1000; padding:15px;">
         <img title="Close" class="popUpCloseIcon popUpFloatRight" alt="Close" src="../Images/close-666.png" ng-click='cm.selectMatterTypePopUpClose()'>
         <div class="alignCenter">
-            <div class="popUpHeader">
-                <div title="Select a {{cm.createMatterTaxonomyColumnNames.ColumnName1}}" class="popUpFloatLeft">Select a {{cm.createMatterTaxonomyColumnNames.ColumnName1}}</div>
+            <!--<div class="popUpHeader">
+                <div title="Select a Company" class="popUpFloatLeft">Select a Company</div>
                 <div class="popUpPracticeGroup clear">
                     <div class="popUpPGDiv">
 
@@ -311,13 +311,13 @@
                     </div>
 
                 </div>
-            </div>
+            </div>-->
             <div class="popUpBody popUpFloatLeft" style="overflow:hidden;">
                 <div class="popUpMatterDescription popUpBodyBlocks popUpMarginRight popUpFloatLeft" id="divAOL">
                     <span style="margin-bottom:5px;">
-                        {{cm.createMatterTaxonomyColumnNames.ColumnName2}}
+                        Practice Area
                     </span>
-                    <!--<label title="Area of Law" class="popUpBodyHeader popUpFloatLeft">{{cm.createMatterTaxonomyColumnNames.ColumnName2}}</label>-->
+                    <!--<label title="Area of Law" class="popUpBodyHeader popUpFloatLeft">{{cm.taxonomyDisplayNames.ColumnName2}}</label>-->
                     <div class="popUpFloatLeft popUpBorder " id="popupAOLBorder" style="height:213px;width:207px;margin-top:5px;">
                         <input class="popUpMDTextArea clear" ng-model="cm.searchLevelTwoText" style="border: 1px solid rgb(200, 200, 200); border-image: none; width:179px;" spellcheck="true" type="text" placeholder="{{cm.createContent.Tab1TermsSelectionSearchPlaceHolderText}}">
                         <div class="popUpCommonContent popUpMD" id="popupAOLContent">
@@ -333,7 +333,7 @@
                 <div class="popUpSubAreaOfLaw popUpBodyBlocks popUpMarginRight popUpFloatLeft " id="divSAOL" style="width:28%;" ng-show="cm.taxonomyHierarchyLevels>=3">
                     <!--<label title="Sub Area of Law (select templates)" class="popUpBodyHeader popUpFloatLeft">Sub Area of Law (select matter type)</label>-->
                     <span style="margin-bottom:5px;">
-                        {{cm.createMatterTaxonomyColumnNames.ColumnName3}}
+                        Matter Type
                     </span>
                     <div class="segoUIFont" ng-show="cm.taxonomyHierarchyLevels>=3">
                         <div class="popUpFloatLeft popUpBorder" id="popupSAOLBorder" style="height:213px;width:207px; margin-top:5px;">
