Fixes based on merged changes

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/matter/createMatter.html
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/app/matter/createMatter.html
@@ -70,7 +70,7 @@
         <!-- Open matter section -->
         <section class="sectionStep" id="snOpenMatter" ng-show='cm.sectionName=="snOpenMatter"' style="display: block;">
             <div class="sectionContent">
-                <label class="contentLabel medium" id="selectClient"><span class="mandatory">*&nbsp;</span>{{cm.createContent.Tab1Dropdown1Label}}</label>
+                <!--<label class="contentLabel medium" id="selectClient"><span class="mandatory">*&nbsp;</span>{{cm.createContent.Tab1Dropdown1Label}}</label>
                 <div class="gutter"></div>
                 <label class="contentLabel small" id="clientId">{{cm.createContent.Tab1Textbox1Label}}</label>
                 <div>
@@ -79,7 +79,7 @@
                     </select>
                 </div>
                 <div class="gutter"></div>
-                <input title="Client ID" disabled="disabled" class="small" id="txtClientId" ng-model="cm.clientId" style="border: 1px solid rgb(200, 200, 200); border-image: none;" type="text" placeholder="">
+                <input title="Client ID" disabled="disabled" class="small" id="txtClientId" ng-model="cm.clientId" style="border: 1px solid rgb(200, 200, 200); border-image: none;" type="text" placeholder="">-->
                 <label class="contentLabel medium clear" ng-class="{'enterMatterName' :  (cm.showMatterId == true)}" id="enterMatterName"><span class="mandatory">*&nbsp;</span>{{cm.createContent.Tab1Textbox2Label}}</label>
                 <div class="gutter"></div>
                 <label class="contentLabel small" id="enterMatterId" ng-show="cm.showMatterId"><span class="mandatory">*&nbsp;</span>{{cm.createContent.Tab1Textbox3Label}}</label>
